[package]
name = "uit"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dotenv = "0.15.0"
env_logger = "0.8.2"
futures = "0.3.8"
log = "0.4.11"
structopt = "0.3.20"
tokio = { version = "0.3", features = [ "full" ] }
tokio-util = { version = "0.5.0", features = [ "compat" ] }
pin-project-lite = "0.2.0"
